[gd_scene load_steps=35 format=2]

[ext_resource path="res://scenes/scripts/levels/12The_End.gd" type="Script" id=1]
[ext_resource path="res://scenes/env/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/12The_End.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/env/DeathScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/textures/backgrounds/final.png" type="Texture" id=5]
[ext_resource path="res://scenes/env/TileMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/env/Finish.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Mirza.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/env/Dialogue_node.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/scripts/objects/NightNauryz.gd" type="Script" id=10]
[ext_resource path="res://scenes/textures/enemies/nn_meteor1.png" type="Texture" id=11]
[ext_resource path="res://scenes/textures/enemies/nn_meteor2.png" type="Texture" id=12]
[ext_resource path="res://scenes/textures/enemies/nn_shoot1.png" type="Texture" id=13]
[ext_resource path="res://scenes/textures/enemies/nn_shoot2.png" type="Texture" id=14]
[ext_resource path="res://scenes/textures/enemies/nn_static.png" type="Texture" id=15]
[ext_resource path="res://scenes/textures/enemies/nn_sword1.png" type="Texture" id=16]
[ext_resource path="res://scenes/textures/enemies/nn_sword2.png" type="Texture" id=17]
[ext_resource path="res://scenes/textures/enemies/nn_sword3.png" type="Texture" id=18]
[ext_resource path="res://scenes/textures/enemies/nn_sword4.png" type="Texture" id=19]
[ext_resource path="res://scenes/textures/enemies/nn_teleport.png" type="Texture" id=20]
[ext_resource path="res://scenes/textures/enemies/nn_defeated.png" type="Texture" id=21]
[ext_resource path="res://audio/nn_shoot.wav" type="AudioStream" id=22]
[ext_resource path="res://audio/nn_sword.wav" type="AudioStream" id=23]
[ext_resource path="res://audio/nn_meteor.wav" type="AudioStream" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.7922, 62.5522 )

[sub_resource type="Animation" id=3]
resource_name = "nn_defeated"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "nn_meteor"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "nn_shoot"
} ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 5, 6, 7, 8 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SwordDetector/SwordCollision:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 18, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SwordDetector/SwordCollision:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.83073
height = 0.164459

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 18.1208, 61.4126 )

[node name="12The_End" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Pause" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="Music" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="DeathScreen" parent="." instance=ExtResource( 4 )]

[node name="Background" type="CanvasLayer" parent="."]
layer = -50

[node name="Final" type="Sprite" parent="Background"]
modulate = Color( 0.462745, 0.490196, 0.552941, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="TileMap" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( -1703937, 5, 0, -1769472, 5, 0, -1769471, 5, 0, -1769470, 5, 0, -1769469, 5, 0, -1769468, 5, 0, -1769467, 5, 0, -1769466, 5, 0, -1769465, 5, 0, -1769464, 5, 0, -1769463, 5, 0, -1769462, 5, 0, -1769461, 5, 0, -1769460, 5, 0, -1769459, 5, 0, -1769458, 5, 0, -1769457, 5, 0, -1769456, 5, 0, -1769455, 5, 0, -1769454, 5, 0, -1769453, 5, 0, -1769452, 5, 0, -1769451, 5, 0, -1769450, 5, 0, -1769449, 5, 0, -1769448, 5, 0, -1769447, 5, 0, -1769446, 5, 0, -1769445, 5, 0, -1769444, 5, 0, -1769443, 5, 0, -1769442, 5, 0, -1769441, 5, 0, -1769440, 5, 0, -1769439, 5, 0, -1769438, 5, 0, -1638401, 5, 0, -1703902, 5, 0, -1572865, 5, 0, -1638366, 5, 0, -1507329, 5, 0, -1572830, 5, 0, -1441793, 5, 0, -1507294, 5, 0, -1376257, 5, 0, -1441758, 5, 0, -1310721, 5, 0, -1376222, 5, 0, -1245185, 5, 0, -1310686, 5, 0, -1179649, 5, 0, -1245150, 5, 0, -1114113, 5, 0, -1179614, 5, 0, -1048577, 5, 0, -1114078, 5, 0, -983041, 5, 0, -1048542, 5, 0, -917505, 5, 0, -983006, 5, 0, -851969, 5, 0, -917470, 5, 0, -786433, 5, 0, -851934, 5, 0, -720897, 5, 0, -786398, 5, 0, -655361, 5, 0, -720862, 5, 0, -589825, 5, 0, -655326, 5, 0, -524289, 5, 0, -589790, 5, 0, -458753, 5, 0, -524254, 5, 0, -393217, 5, 0, -458718, 5, 0, -327681, 5, 0, -393182, 5, 0, -262145, 5, 0, -327646, 5, 0, -196609, 5, 0, -262133, 26, 0, -262132, 15, 0, -262131, 15, 0, -262130, 15, 0, -262129, 15, 0, -262128, 15, 0, -262127, 15, 0, -262126, 15, 0, -262125, 15, 0, -262124, 25, 0, -262110, 5, 0, -131073, 5, 0, -196574, 5, 0, -65537, 5, 0, -131038, 5, 0, -1, 5, 0, -65502, 5, 0, 65535, 5, 0, 34, 5, 0, 131071, 5, 0, 65570, 5, 0, 196607, 5, 0, 131075, 26, 0, 131076, 15, 0, 131077, 15, 0, 131078, 15, 0, 131079, 15, 0, 131080, 15, 0, 131081, 15, 0, 131082, 15, 0, 131083, 25, 0, 131092, 26, 0, 131093, 15, 0, 131094, 15, 0, 131095, 15, 0, 131096, 15, 0, 131097, 15, 0, 131098, 15, 0, 131099, 15, 0, 131100, 25, 0, 131106, 5, 0, 262143, 5, 0, 196642, 5, 0, 327679, 5, 0, 262178, 5, 0, 393215, 5, 0, 327714, 5, 0, 458751, 5, 0, 393250, 5, 0, 524287, 5, 0, 458786, 5, 0, 589823, 5, 0, 524322, 5, 0, 655359, 5, 0, 589824, 15, 0, 589825, 15, 0, 589826, 15, 0, 589827, 15, 0, 589828, 15, 0, 589829, 15, 0, 589830, 15, 0, 589831, 15, 0, 589832, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 589838, 15, 0, 589839, 15, 0, 589840, 15, 0, 589841, 15, 0, 589842, 15, 0, 589843, 15, 0, 589844, 15, 0, 589845, 15, 0, 589846, 15, 0, 589847, 15, 0, 589848, 15, 0, 589849, 15, 0, 589850, 15, 0, 589851, 15, 0, 589852, 15, 0, 589853, 15, 0, 589854, 15, 0, 589855, 15, 0, 589856, 15, 0, 589857, 15, 0, 589858, 5, 0, 720895, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 5, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 5, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 5, 0, 655392, 5, 0, 655393, 5, 0, 655394, 5, 0, 786431, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 5, 0, 720928, 5, 0, 720929, 5, 0, 720930, 5, 0 )

[node name="Finish" parent="." instance=ExtResource( 7 )]
position = Vector2( 3000, -694.247 )
next_level = "Credits"
number_of_level = 12
boss = true
boss_name = "Ночной Наурыз"

[node name="Mirza" parent="." instance=ExtResource( 8 )]
position = Vector2( 185.991, 512.917 )
camera_bounds = [ 0, -3500, 2170, 720 ]

[node name="dialogue_node1" parent="." instance=ExtResource( 9 )]
position = Vector2( 185.87, 482.37 )
actor_1_text_color = Color( 1, 0.286275, 0.286275, 1 )
actor_1 = NodePath("../NightNauryz")
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Ночной Наурыз! Верни рецепт кумыса, и обойдёмся по-хорошему!", "actor_1", "Мне не нужна твоя пощада, Мырза.", "Для чего ты сражаешься? Почему ты защищаешь этот город?", "Когда всё закончится, никто о тебе не вспомнит. Такова природа людей.", "С рецептом кумыса я стану могущественным, смогу изменить мир, избавить его от грязи.", "Присоединяйся ко мне, пока не поздно.", "actor_mirza", "Да, ты прав. Люди не вспомнят обо мне.", "Но я и мои друзья всё равно сражаемся за них, потому что больше некому.", "Ты не сможешь изменить мир только с одним кумысом, ты сделаешь только хуже.", "Изменить мир должны все вместе, и я не дам тебе этому помешать.", "actor_1", "Что ж, ты сделал свой выбор.", "end_dialogue" ]

[node name="dialogue_node2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1030.94, -466.246 )
scale = Vector2( 0.2, 3 )
actor_1_text_color = Color( 1, 0.286275, 0.286275, 1 )
actor_1 = NodePath("../NightNauryz")
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_1", "Ты ничего не добьёшься!", "За рецептом кумыса продолжат охотиться, когда узнают, что тут случилось.", "Все узнают, что можно добраться до кумыса,  устранив тебя!", "actor_mirza", "Не узнают...", "Всё, что происходит в Астане, остаётся в Астане.", "set_animation", "mirza_stand_and_shoot", "play_animation", "end_dialogue" ]
active = false

[node name="NightNauryz" type="KinematicBody2D" parent="." groups=[
"enemy_body",
]]
editor/display_folded = true
position = Vector2( 815.331, 479.974 )
collision_layer = 8
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
charname = "Ночной Наурыз"

[node name="Texture" type="AnimatedSprite" parent="NightNauryz"]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 4

[node name="NightNauryzCollision" type="CollisionShape2D" parent="NightNauryz"]
position = Vector2( 27, 15 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NightNauryz"]
autoplay = "nn_static"
anims/nn_defeated = SubResource( 3 )
anims/nn_meteor = SubResource( 4 )
anims/nn_shoot = SubResource( 5 )
anims/nn_static = SubResource( 6 )
anims/nn_sword = SubResource( 7 )
anims/nn_teleport = SubResource( 8 )

[node name="ActionTimer" type="Timer" parent="NightNauryz"]
one_shot = true

[node name="ExtraTimer" type="Timer" parent="NightNauryz"]
wait_time = 6.0
one_shot = true

[node name="SwordDetector" type="Area2D" parent="NightNauryz"]
editor/display_folded = true

[node name="SwordCollision" type="CollisionShape2D" parent="NightNauryz/SwordDetector"]
modulate = Color( 0.196078, 1, 0, 1 )
rotation = 1.5708
scale = Vector2( 1e-005, 1e-005 )
shape = SubResource( 9 )

[node name="StompDetector" type="Area2D" parent="NightNauryz"]
editor/display_folded = true

[node name="StompBody" type="CollisionShape2D" parent="NightNauryz/StompDetector"]
modulate = Color( 0.243137, 0.909804, 0, 1 )
position = Vector2( 27, 15 )
shape = SubResource( 10 )

[node name="Knife" type="AudioStreamPlayer" parent="NightNauryz"]
stream = ExtResource( 22 )
bus = "Effects"

[node name="Sword" type="AudioStreamPlayer" parent="NightNauryz"]
stream = ExtResource( 23 )
bus = "Effects"

[node name="Meteor" type="AudioStreamPlayer" parent="NightNauryz"]
stream = ExtResource( 24 )
bus = "Effects"
[connection signal="dialogue_finished" from="dialogue_node1" to="." method="_on_dialogue1_finished"]
[connection signal="dialogue_finished" from="dialogue_node2" to="." method="_on_dialogue2_finished"]
[connection signal="dialogue_started" from="dialogue_node2" to="." method="_on_dialogue2_started"]
[connection signal="animation_finished" from="NightNauryz/AnimationPlayer" to="NightNauryz" method="_on_animation_finished"]
[connection signal="timeout" from="NightNauryz/ActionTimer" to="NightNauryz" method="_on_ActionTimer_timeout"]
[connection signal="timeout" from="NightNauryz/ExtraTimer" to="NightNauryz" method="_on_extra_timeout"]
[connection signal="body_entered" from="NightNauryz/SwordDetector" to="NightNauryz" method="_on_sword_body_entered"]
[connection signal="body_entered" from="NightNauryz/StompDetector" to="NightNauryz" method="_on_stomp_body_entered"]
